#11463 closed bug (fixed)
StyledEdit "Find" only works if the cursor is placed on the top of the document.
Reported by: | Giova84 | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/StyledEdit | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #10762 | |
Platform: | x86 |
Description
I noticed this issue since a long time. Well: open any text file which contains some text (four lines are enough for this example): eg:
first line second line third line fourth line
then place the text cursor on the end of this file, open the find window of StyledEdit and search for "first": StyledEdit is not able to find the word "first". Instead, if you place the text cursor at the beginning of the file, you will be able to search and find the whole content of the file.
Change History (5)
comment:1 by , 6 years ago
comment:2 by , 6 years ago
Oh well, since I see that any other text editor (also Pe: I just noticed that in Pe "wrap around" is also activated by default) doesn't need to activate this kind of functions to search inside the file, i totally missed the need to activate this checkbox! :-) After selecting "Wrap-around search", works as expected. Why not activate this behaviour by default? And you're right; in anyway, at least these preferences should be saved. So what about this ticket? Can be closed? Humdinger: would you like submit the enhancement ticket about StyledEdit?
comment:3 by , 6 years ago
No, this is a bug, but for different reasons. When opening a document, the cursor ends up at the end of the file despite the view being at the start. I've been caught out by this bug many times.
comment:5 by , 6 years ago
Blocking: | 10762 added |
---|
Is the "Wrap-around search" box checked? If not, that's expected behaviour. Personally, I'd have it on by default. The find options aren't saved even... that's probably worth an enhancement ticket.