StyledEdit: ensure caret position gets set correctly

* When opening documents without be:caret_position,
  StyledEdit would place the cursor at the end of
  the file. _LoadAttrs() intended to set it to the
  beginning; however, a check for an existing BRect
  for positioning the window would return early,
  preventing the caret position to be set.

Fixes #11463